Admin auth error

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,5 @@
 # Replace Prisma DATABASE_URL with MongoDB connection string
-MONGODB_URI=mongodb://localhost:27017/hospital_management
-# or for MongoDB Atlas:
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/hospital_management
+MONGODB_URI=mongodb://localhost:27017/HospitalDB
 
 JWT_SECRET=your_jwt_secret_here
 NODE_ENV=development
