--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
     "build": "cd client && npm run build",
-    "start": "cd server && npm start"
+    "start": "cd server && npm start",
+    "load-inventory": "cd server && node scripts/loadInventory.js",
+    "create-patient": "cd server && node scripts/createPatient.js"
   },
   "repository": {
     "type": "git",
