npx vite build for vercel

--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "./node_modules/.bin/vite build",
+    "build": "npx vite build",
     "lint": "eslint .",
-    "preview": "vite build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
